# nasdaq-valuation-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/raw/: nasdaq100_fundamentals.csv
notebooks/: 01_data_collection.ipynb  02_valuation_analysis.ipynb
src/nasdaq_valuation/: __init__.py  cli.py  data_collection.py  modeling.py
tests/: test_modeling.py
