[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasdaq-valuation-analysis"
version = "0.1.0"
description = "Sector-relative valuation and growth expectation analysis for NASDAQ-100 fundamentals."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
nasdaq-valuation = "nasdaq_valuation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
